# sample_macros_with_root_cern

./: README.md
Avalanche_Size/: Avalanche_Size.root  CMakeLists.txt  avalanche_size  avalanche_size.C  avalanche_size.C~
Average_Signal/: Avalanche_Signal.root  avalanche_signal.C
Box_muller/: exercise5.C  exercise5.C~  exercise5.eps  jim_distribution.C~
Buffon_Needle/: pi_value_using_buffons_needle.C  pi_value_using_circle.C
Calulate_pi_with_circle/: question1.C
Difference_distribution_of_two_exponentials/: difference_distribution.eps  exercise2.C  exercise2.C~
Gamma_Ray_Spectroscopy/: Read_2D.C  Read_Spectra.C
Gamma_Ray_Spectroscopy/Project_1_Error/: Cobalt~  Europium~  efficency_Eu.txt  efficency_Eu.txt~  efficiency  efficiency.c  efficiency.eps  efficiency_final.eps  fit_example.C~  fit_resolution.C~  gnuplot  gnuplot~  graph_make.C~  graph_make_efficency.C  graph_make_efficency.C~  graph_make_resolution.C  graph_make_resolution.C~  interference_test.C  interference_test.C~  interference_test_C.d  interference_test_C_ACLiC_dict_rdict.pcm  outdata1.txt  resolution  resolution.c  resolution.eps  resolution_Eu.txt  resolution_Eu.txt~  resolution_final.eps  test.C~
Gamma_Ray_Spectroscopy/Project_2/: Fifteen_Minutes.txt  Ten_Minutes.txt  Twenty_Minutes.txt  tracking_Fe.eps  (+5 more)
Generate_Marsagalia_random_numbers/: exercise1.C  exercise1.C~  mars1.eps  mars2.eps  mars3.eps  mars5.eps  mars9.eps
Introduce_correlation_between_two_random_variable/: question4.C
Neutron_Spectroscopy/: cobolt_tree_read.C  coincidence.C  fwhm_fit.C  line_fit.C  makecode.C  neutroncut.C  neutronnumber.C  psd.eps  source_strength.eps  sourcepsd.C  sourcestrength.C  spectra.eps  timing.C  tree_create.C
TMinut_usage/: example_01.C~  example_02.C  example_02.C~  example_03.C  example_03.C~  example_data.root  fit_example.C~  lifetime_test.C~  test.C~
Variable_Transformation_vs_acceptance_rejection/: acceptance_rejection.C  exercise4.C  exercise4.C~  exercise4.eps
simulate_radioactivity/: jim_radioactivity.C
sphere_point_picking/: question2.C
sum_of_angles_of_triangle/: problem1_theta.C
(+5 files in other folders)
